--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <div id="wrapper">
     <div id="divLeft">
         <div id="wrapper-left">
-            <div id="title">Baseball Game</div>
+            <div id="title">Basebgitall Game</div>
             <!-- 야구 게임을 위한 input 태그 그룹-->
             <div id="pitcher">
-                <input type="text" class="inputTag" maxlength="1" id="bOne" onkeypress="return fn_press(event, 'numbers');" onkeydown="fn_press_han(this);" style="ime-mode:disabled;" autofocus/>
-                <input type="text" class="inputTag" maxlength="1" id="bTwo" onkeypress="return fn_press(event, 'numbers');" onkeydown="fn_press_han(this);" style="ime-mode:disabled;"/>
-                <input type="text" class="inputTag" maxlength="1" id="bThree" onkeypress="return fn_press(event, 'numbers');" onkeydown="fn_press_han(this);" style="ime-mode:disabled;"/>
-                <input type="text" class="inputTag" maxlength="1" id="bFour" onkeypress="return fn_press(event, 'numbers');" onkeydown="fn_press_han(this);" style="ime-mode:disabled;"/>
+                <input type="text" class="inputTag" maxlength="1" id="bOne" onkeypress="return fn_press(event, 'numbers');" onkeydown="fn_press_han(this);" autofocus/>
+                <input type="text" class="inputTag" maxlength="1" id="bTwo" onkeypress="return fn_press(event, 'numbers');" onkeydown="fn_press_han(this);" />
+                <input type="text" class="inputTag" maxlength="1" id="bThree" onkeypress="return fn_press(event, 'numbers');" onkeydown="fn_press_han(this);" "/>
+                <input type="text" class="inputTag" maxlength="1" id="bFour" onkeypress="return fn_press(event, 'numbers');" onkeydown="fn_press_han(this);" "/>
                 <button type="submit" id="pBtn" onclick="pitch()">Pitch!</button>
                 <button typer="submit" id="rBtn" onclick="restart()">Restart!</button>
             </div>
