no korean inputs

--- a/index.html
+++ b/index.html
@@ -11,17 +11,13 @@
                 <!-- 야구 게임을 위한 input 태그 그룹-->
                 <div id="pitcher">
                     <input type="text" class="inputTag" maxlength="1" id="bOne"
-                        onkeypress="return fn_press(event, 'numbers');" onkeydown="fn_press_han(this);"
-                        style="ime-mode:disabled;" autofocus />
+                        onkeypress="return fn_press(event, 'numbers');" onkeyup="fn_press_han(this);" value="" autofocus />
                     <input type="text" class="inputTag" maxlength="1" id="bTwo"
-                        onkeypress="return fn_press(event, 'numbers');" onkeydown="fn_press_han(this);"
-                        style="ime-mode:disabled;" />
+                        onkeypress="return fn_press(event, 'numbers');" onkeyup="fn_press_han(this);" value="" />
                     <input type="text" class="inputTag" maxlength="1" id="bThree"
-                        onkeypress="return fn_press(event, 'numbers');" onkeydown="fn_press_han(this);"
-                        style="ime-mode:disabled;" />
+                        onkeypress="return fn_press(event, 'numbers');" onkeyup="fn_press_han(this);" value="" />
                     <input type="text" class="inputTag" maxlength="1" id="bFour"
-                        onkeypress="return fn_press(event, 'numbers');" onkeydown="fn_press_han(this);"
-                        style="ime-mode:disabled;" />
+                        onkeypress="return fn_press(event, 'numbers');" onkeyup="fn_press_han(this);" value="" />
                     <button type="submit" id="pBtn" onclick="pitch()">Pitch!</button>
                     <button typer="submit" id="rBtn" onclick="restart()">Restart!</button>
                 </div>
